issues with bullet points not showing up in crome

--- a/scss/custom/do.scss
+++ b/scss/custom/do.scss
@@ -69,7 +69,7 @@ $include-html-classes: false;
 
 					li{
 						float: left;
-						width: 83%;
+						width: 101%;
 					}
 
 					li:before{
